# homebank

./: AUTHORS  ChangeLog  LICENSE  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h.in  configure  configure.ac
autom4te.cache/: output.0  traces.0
data/: Makefile.am  Makefile.in  homebank.desktop.in  homebank.desktop.in.in
data/datas/: Makefile.am  Makefile.in  example.xhb  hb-categories-de.csv  hb-categories-en.csv  hb-categories-es.csv  hb-categories-fr.csv  hb-categories-it.csv  hb-categories-pt.csv  hb-categories-ro.csv  hb-categories-ru.csv
data/icons/: Makefile.am  Makefile.in
data/icons/hicolor/: Makefile.in
data/icons/hicolor/16x16/: Makefile.in
data/icons/hicolor/16x16/apps/: Makefile.am  Makefile.in
data/icons/hicolor/24x24/: Makefile.in
data/icons/hicolor/24x24/apps/: Makefile.am  Makefile.in
data/icons/hicolor/32x32/: Makefile.in
data/icons/hicolor/32x32/apps/: Makefile.am  Makefile.in
data/icons/hicolor/48x48/: Makefile.in
data/icons/hicolor/48x48/apps/: Makefile.am  Makefile.in
data/icons/hicolor/scalable/: Makefile.in
data/icons/hicolor/scalable/apps/: Makefile.am  Makefile.in
doc/: 00new4.0.html  00new4.1.html  00new4.2.html  00new4.3.html  00new4.4.html  02balance.html  02concepts.html  02intro.html  02minor.html  03account.html  03accountmenu.html  03auto_addition.html  03auto_assign.html  03carcost.html  03import.html  03main.html  03mainmenu.html  03reconcile.html  03trans_add.html  03trans_auto.html  03trans_mult.html  03transactions.html  03validate.html  04acco.html  04arch.html  04assign.html  04bud1.html  04cate.html  04paye.html  04pref.html  04tran.html  04wall.html  05bud2.html  05cost.html  05over.html  05stat.html  05time.html  06csvformat.html  99date.html  99filt.html  (+11 more)
doc/images/: Makefile.am  Makefile.in
images/: Makefile.am  Makefile.in
mime/: Makefile.am  Makefile.in  homebank.applications  homebank.keys  homebank.mime  homebank.xml
po/: POTFILES.in  POTFILES.skip  am.po  ar.po  ast.po  be.po  bg.po  br.po  bs.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  es.gmo  es.po  et.po  eu.po  fa.po  fi.po  fr.gmo  fr.po  gl.po  he.po  homebank.pot  hr.po  ht.po  hu.po  id.po  is.po  it.po  ja.po  ka.po  kk.po  kn.po  ko.po  lt.po  (+31 more)
src/: Makefile.am  Makefile.in  amiga.c  amiga.h  colormap.h  da_account.c  da_account.h  da_assign.c  da_assign.h  da_category.c  da_category.h  da_encoding.c  da_encoding.h  da_other.c  da_other.h  da_payee.c  da_payee.h  da_tag.c  da_tag.h  da_transaction.c  da_transaction.h  data_access.c  data_access.h  def_account.c  def_account.h  def_archive.c  def_archive.h  def_budget.c  def_budget.h  def_category.c  def_category.h  def_filter.c  def_filter.h  def_lists.c  def_lists.h  def_operation.c  def_operation.h  def_payee.c  def_payee.h  def_pref.c  (+68 more)
