#SUBDIRS = images src
SUBDIRS = data doc images mime po src


#pot: Makefile
#${MAKE} -C po $(PACKAGE).pot

INTLTOOL_FILES = intltool-extract.in \
                 intltool-merge.in \
                 intltool-update.in
                 
DISTCLEANFILES = ... intltool-extract \
                 intltool-merge \
                 intltool-update \
                 po/.intltool-merge-cache
