SUBDIRS = images

helpdir   = $(datadir)/homebank/help
help_DATA = \
02balance.html \
02concepts.html \
02minor.html \
03account.html \
03accountmenu.html \
03carcost.html \
03main.html \
03mainmenu.html \
03validate.html \
04acco.html \
05bud2.html \
05cost.html \
05over.html \
05stat.html \
99date.html \
04arch.html \
04bud1.html \
04cate.html \
99mui.html \
99patt.html \
99sort.html \
04tran.html \
04paye.html \
style.html \
04pref.html \
04wall.html \
06csvformat.html \
99filt.html \
index.html \
main.html \
navig.html \
02intro.html \
03transactions.html \
help.css

EXTRA_DIST   = $(help_DATA)
