SUBDIRS = images

helpdir   = $(datadir)/homebank/help
help_DATA = \
00new4.4.html \
00new4.3.html \
00new4.2.html \
00new4.1.html \
00new4.0.html \
02balance.html \
02concepts.html \
02intro.html \
02minor.html \
03account.html \
03accountmenu.html \
03auto_addition.html \
03auto_assign.html \
03carcost.html \
03import.html \
03main.html \
03mainmenu.html \
03reconcile.html \
03trans_add.html \
04acco.html \
04arch.html \
04assign.html \
04bud1.html \
04cate.html \
04paye.html \
04pref.html \
04tran.html \
04wall.html \
05bud2.html \
05cost.html \
05time.html \
05over.html \
05stat.html \
06csvformat.html \
99filt.html \
index.html \
main.html \
navig.html \
help.css

EXTRA_DIST   = $(help_DATA)
