
pixmapsdir   = $(datadir)/homebank/images

pixmaps_DATA = \
account.svg \
archive.svg \
budget.svg \
category.svg \
payee.svg \
document-new.svg \
document-open.svg \
document-save.svg \
filter.svg \
homebank.svg \
legend.svg \
rate.svg \
lst_new.svg \
lst_auto.svg \
lst_edit.svg \
lst_remind.svg \
lst_vali.svg \
lst_warning.svg \
creditcard.svg \
cheque.svg \
cash.svg \
banktransfert.svg \
personaltransfert.svg \
ope_add.svg \
ope_delete.svg \
ope_edit.svg \
ope_herit.svg \
ope_show.svg \
ope_valid.svg \
prf_display.svg \
prf_euro.svg \
prf_report.svg \
prf_general.svg \
prf_help.svg \
prf_interface.svg \
report_budget.svg \
report_car.svg \
refresh.svg \
report_overdrawn.svg \
report_stats.svg \
view_bar.svg \
view_line.svg \
view_list.svg \
view_pie.svg \
splash.png 

EXTRA_DIST   = $(pixmaps_DATA)
