
bin_PROGRAMS = homebank

homebank_SOURCES = \
gtkchart.c \
gtkdateentry.c \
data_access.c \
def_account.c \
def_archive.c \
def_budget.c \
def_category.c \
def_filter.c \
def_lists.c \
def_operation.c \
def_payee.c \
def_pref.c \
def_wallet.c \
dsp_account.c \
dsp_wallet.c \
homebank.c \
imp_amiga.c \
import.c \
list_account.c \
list_operation.c \
list_upcoming.c \
misc.c \
preferences.c \
rep_budget.c \
rep_car.c \
rep_over.c \
rep_stats.c \
widgets.c \
xml.c \
data_access.h \
def_account.h \
def_archive.h \
def_budget.h \
def_category.h \
def_filter.h \
def_lists.h \
def_operation.h \
def_payee.h \
def_pref.h \
def_wallet.h \
dsp_account.h \
dsp_wallet.h \
enums.h \
gtkchart.h \
gtkdateentry.h \
homebank.h \
imp_amiga.h \
import.h \
list_account.h \
list_operation.h \
list_upcoming.h \
misc.h \
preferences.h \
rep_budget.h \
rep_car.h \
rep_over.h \
rep_stats.h \
widgets.h \
xml.h

homebank_LDADD = $(DEPS_LIBS)

AM_CPPFLAGS = \
$(DEPS_CFLAGS) \
-DLOCALE_DIR=\""$(datadir)/locale"\" \
-DPIXMAPS_DIR=\""$(datadir)/homebank/images"\" \
-DHELP_DIR=\""$(datadir)/homebank/help"\"

