
imagesdir   = $(datadir)/homebank/help/images

images_DATA = \
03account1.png \
03main1.png \
03main_added.png \
03main_edited.png \
03main_reminded.png \
03main_validated.png \
04account1.png \
04archive1.png \
04archive2.png \
04budget1.png \
04category1.png \
04filter1.png \
05carcost1.png \
04payee1.png \
04prefs1.png \
04prefs2.png \
04prefs3.png \
04prefs4.png \
04prefs5.png \
04prefs6.png \
04prefs7.png \
04wallet1.png \
05statistics1.png \
bg_page.gif \
home.gif \
homebank_32.png \
homebank_64.png \
next.gif \
nextdsbl.gif \
prev.gif \
prevdsbl.gif \
shotback.png \
05statistics2.png \
05statistics3.png \
05budget2.png \
05budget1.png \
05overdrawn2.png \
05overdrawn1.png \
04transaction1.png \
1.png \
2.png \
3.png \
4.png \
5.png \
6.png \
7.png \
8.png \
9.png \
10.png \
11.png \
12.png \
13.png \
14.png \
15.png

EXTRA_DIST   = $(images_DATA)
