
imagesdir   = $(datadir)/homebank/help/images

images_DATA = \
00import1.png \
00import2.png \
00import4.png \
00import5.png \
00import6.png \
03account1.png \
03import1.png \
03import3a.png \
03import3b.png \
03import4.png \
03main1.png \
03main_added.png \
03main_edited.png \
03main_reminded.png \
03main_validated.png \
03transauto1.png \
03transauto2.png \
03transmult1.png \
04account1.png \
04archive1.png \
04assign1.png \
04budget1.png \
04category1.png \
04filter1.png \
04payee1.png \
04prefs1.png \
04prefs2.png \
04prefs3.png \
04prefs4.png \
04prefs5.png \
04prefs6.png \
04transaction1.png \
04wallet1.png \
05budget1.png \
05carcost1.png \
05overdrawn1.png \
05statistics1.png \
05trendtime1.png \
10.png \
11.png \
12.png \
13.png \
14.png \
15.png \
1.png \
2.png \
3.png \
4.png \
5.png \
6.png \
7.png \
8.png \
9.png \
bg_page.gif \
doc_balance.png \
doc_title.png \
go-home.png \
go-next.png \
go-previous.png \
no-home.png \
no-next.png \
no-previous.png \
shotback.png \
top-gradient.png \
web_title.png


EXTRA_DIST   = $(images_DATA)
